Remove bower warning
Apparently, name is recommended to be lower-case

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "TRIP",
+  "name": "trip",
   "description": "Trip Recording and Itinerary Planner",
   "version": "0.0.0",
   "license": "GPL-3.0+",
