Show waypoint comment on itinerary waypoint map marker

--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angular-jwt": "^0.1.7",
     "angular-validation-match": "^1.9.0",
     "angular-animate": "~1.5.6",
+    "angular-sanitize": "~1.5.6",
     "angular-bootstrap": "^2.2.0",
     "angular-i18n": "~1.5.6",
     "angular-socket-io": "^0.7.0",
@@ -25,7 +26,8 @@
     "angular-pagedown": "0.4.3",
     "ui-leaflet": "^1.0.0",
     "ui-leaflet-draw": "^0.0.3",
-    "leaflet-draw": "Leaflet/Leaflet.draw#^0.4.9"
+    "leaflet-draw": "Leaflet/Leaflet.draw#^0.4.9",
+    "lodash": "^4.17.4"
   },
   "resolutions": {
     "angular": "~1.5.6",
