Implemented converting to and from Open Location Codes

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,6 +1,7 @@
 {
   "globalstrict": true,
   "globals": {
+  "OpenLocationCode": false,
 	"FormData" : false,
 	"Buffer": false,
 	"browser": false,
