--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "ui-leaflet": "^1.0.0",
     "ui-leaflet-draw": "^0.0.3",
     "leaflet-draw": "Leaflet/Leaflet.draw#^0.4.9",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "open-location-code": "google/open-location-code#^1.0.1"
   },
   "resolutions": {
     "angular": "~1.5.6",
