Replace JS confirmation windows with dialogs

--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "leaflet-draw": "Leaflet/Leaflet.draw#^0.4.9",
     "lodash": "^4.17.4",
     "open-location-code": "google/open-location-code#^1.0.1",
-    "proj4": "^2.4.3"
+    "proj4": "^2.4.3",
+    "angular-bootstrap-confirm": "^2.5.1"
   },
   "resolutions": {
     "angular": "~1.5.6",
