--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,6 @@
     "angular-i18n": "~1.5.6",
     "angular-socket-io": "^0.7.0",
     "socket.io-client": "^1.7.2",
-    "angular-file-saver": "^1.1.2",
     "angular-pagedown": "0.4.3",
     "ui-leaflet-draw": "^0.0.5",
     "leaflet-draw": "Leaflet/Leaflet.draw#^0.4.9",
@@ -30,7 +29,8 @@
     "open-location-code": "google/open-location-code#^1.0.1",
     "proj4": "^2.4.3",
     "angular-bootstrap-confirm": "^2.5.1",
-    "ui-leaflet": "frankdean/ui-leaflet#1.0.4-rc.1"
+    "ui-leaflet": "frankdean/ui-leaflet#1.0.4-rc.1",
+    "angular-file-saver": "frankdean/angular-file-saver#1.1.4-rc.1"
   },
   "resolutions": {
     "angular": "~1.5.6",
