Changed build process to use yarn instead of npm and bower

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 logs/*
 !.gitkeep
 node_modules/
-bower_components/
 tmp
 .DS_Store
 .idea
@@ -9,3 +8,4 @@ npm-debug.log
 /README.html
 app/third_party/
 /dist/*
+/app/bower_components
