--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.0.0",
   "description": "Trip Recording and Itinerary Planner web client",
   "author": {
-	"name": "Frank Dean",
-	"email": "frankdean@users.noreply.github.com"
+    "name": "Frank Dean",
+    "email": "frankdean@users.noreply.github.com"
   },
   "license": "GPL-3.0+",
   "private": true,
   "keywords": [
     "track",
-	"logging",
-	"recording",
-	"itinerary",
-	"planner",
+    "logging",
+    "recording",
+    "itinerary",
+    "planner",
     "GPS"
   ],
   "devDependencies": {
@@ -38,15 +38,15 @@
     "uglify-js": "^2.8.29"
   },
   "scripts": {
-    "postinstall": "bower install",
-    "prestart": "npm install",
+    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/@bower_components'), 'app/bower_components', 'junction') } catch (e) { }\"",
+    "prestart": "yarn install",
     "start": "http-server -a localhost -p 8000 -c-1",
-    "pretest": "npm install",
+    "pretest": "yarn install",
     "test": "karma start test/karma.conf.js",
     "test-single-run": "karma start test/karma.conf.js  --single-run",
-    "preupdate-webdriver": "npm install",
+    "preupdate-webdriver": "yarn install",
     "update-webdriver": "webdriver-manager update",
-    "_preprotractor": "npm run update-webdriver",
+    "_preprotractor": "yarn run update-webdriver",
     "protractor": "protractor test/protractor.conf.js",
     "dist-update-index-async": "node -e \"require('shelljs/global'); sed('-i', /    \\/\\/ You need to run .npm run update-index-async. to inject the angular async code here/, sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map','app/bower_components/angular-loader/angular-loader.min.js'), 'dist/app/index-async.html');\"",
     "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /    \\/\\/ You need to run .npm run update-index-async. to inject the angular async code here/, sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map','app/bower_components/angular-loader/angular-loader.min.js'), 'app/index-async.html');\"",
@@ -60,10 +60,48 @@
     "clean": "rimraf dist",
     "lint": "jshint app/js/*.js app/js/**/*.js test/**/*.js",
     "prebuild": "mkdirp dist/app/partials --mode 0775 && mkdirp dist/app/css --mode 0775",
-    "build": "npm run build:scripts && npm run build:css",
+    "build": "yarn run build:scripts && yarn run build:css",
     "build:scripts": "cd dist/app && ../../node_modules/uglify-js/bin/uglifyjs ../../app/js/*.js ../../app/js/**/*.js --compress --mangle --source-map trip.min.js.map --output trip.min.js",
     "build:css": "cssmin app/css/app.css > dist/app/css/app.css && cssmin app/css/ie10-viewport-bug-workaround.css > dist/app/css/ie10-viewport-bug-workaround.css",
     "dist": "copyfiles 'app/bower_components/leaflet/dist/leaflet.js' 'app/bower_components/leaflet/dist/images/*.png' 'app/bower_components/leaflet-draw/dist/leaflet.draw.js' 'app/bower_components/leaflet-draw/dist/images/*' 'app/bower_components/ui-leaflet-draw/dist/ui-leaflet-draw.js' 'app/bower_components/socket.io-client/socket.io.js' 'app/bower_components/**/*.min.js' 'app/bower_components/**/*.min.js.map' 'app/bower_components/angular-i18n/angular-locale_en-gb.js' 'app/bower_components/pagedown/*.js' 'app/bower_components/proj4/dist/*.js' 'app/bower_components/pagedown/*.png' 'app/bower_components/ui-leaflet/**/*.min.no-header.js' 'app/bower_components/**/*.css' 'app/bower_components/**/*.css.map' 'app/css/*.min.css' 'app/index*.html' 'app/partials/*.html' dist",
-    "build-release": "npm run disable-debug && npm run disable-debug-logging && npm run clean && npm run build && npm run dist && npm run update-index-prod && npm run dist-update-index-async && npm run update-index-async-prod && npm run enable-debug && npm run enable-debug-logging"
+    "build-release": "yarn run disable-debug && yarn run disable-debug-logging && yarn run clean && yarn run build && yarn run dist && yarn run update-index-prod && yarn run dist-update-index-async && yarn run update-index-async-prod && yarn run enable-debug && yarn run enable-debug-logging"
+  },
+  "dependencies": {
+    "@bower_components/Blob.js": "angular-1x/Blob.js#1.0.0",
+    "@bower_components/angular": "angular/bower-angular#1.5.11",
+    "@bower_components/angular-animate": "angular/bower-angular-animate#~1.5.11",
+    "@bower_components/angular-bootstrap": "angular-ui/bootstrap-bower#^2.2.0",
+    "@bower_components/angular-bootstrap-confirm": "mattlewis92/angular-bootstrap-confirm#^2.5.1",
+    "@bower_components/angular-file-saver": "frankdean/angular-file-saver#1.1.4-rc.1",
+    "@bower_components/angular-i18n": "angular/bower-angular-i18n#~1.5.11",
+    "@bower_components/angular-jwt": "auth0/angular-jwt#^0.1.7",
+    "@bower_components/angular-loader": "angular/bower-angular-loader#~1.5.11",
+    "@bower_components/angular-messages": "angular/bower-angular-messages#~1.5.11",
+    "@bower_components/angular-mocks": "angular/bower-angular-mocks#~1.5.11",
+    "@bower_components/angular-pagedown": "kennyki/angular-pagedown#0.4.4",
+    "@bower_components/angular-paging": "brantwills/Angular-Paging#^2.2.2",
+    "@bower_components/angular-resource": "angular/bower-angular-resource#~1.5.11",
+    "@bower_components/angular-route": "angular/bower-angular-route#~1.5.11",
+    "@bower_components/angular-sanitize": "angular/bower-angular-sanitize#~1.5.11",
+    "@bower_components/angular-simple-logger": "nmccready/angular-simple-logger#~0.1.4",
+    "@bower_components/angular-socket-io": "btford/angular-socket-io#^0.7.0",
+    "@bower_components/angular-validation-match": "TheSharpieOne/angular-validation-match#^1.9.0",
+    "@bower_components/bootstrap": "twbs/bootstrap#^3.3.6",
+    "@bower_components/file-saver": "eligrey/FileSaver.js#^1.3.3",
+    "@bower_components/html5-boilerplate": "h5bp/html5-boilerplate#^5.3.0",
+    "@bower_components/jquery": "jquery/jquery-dist#1.9.1 - 3",
+    "@bower_components/leaflet": "Leaflet/Leaflet#1.0.3",
+    "@bower_components/leaflet-dist": "vperron/leaflet-dist#0.7.x",
+    "@bower_components/leaflet-draw": "Leaflet/Leaflet.draw#0.4.9",
+    "@bower_components/lodash": "lodash/lodash#^4.17.4",
+    "@bower_components/open-location-code": "google/open-location-code#^1.0.1",
+    "@bower_components/pagedown": "baminteractive/PageDown#^1.1.0",
+    "@bower_components/proj4": "proj4js/proj4js#2.4.4",
+    "@bower_components/socket.io-client": "LearnBoost/socket.io-client#^1.7.2",
+    "@bower_components/ui-leaflet": "frankdean/ui-leaflet#1.0.4-rc.1",
+    "@bower_components/ui-leaflet-draw": "angular-ui/ui-leaflet-draw#0.0.5"
+  },
+  "engines": {
+    "yarn": ">= 1.0.0"
   }
 }
