--- a/package.json
+++ b/package.json
@@ -37,6 +37,44 @@
     "shelljs": "^0.7.6",
     "uglify-js": "^2.8.29"
   },
+  "dependencies": {
+    "@bower_components/Blob.js": "angular-1x/Blob.js#1.0.0",
+    "@bower_components/angular": "angular/bower-angular#^1.5.11",
+    "@bower_components/angular-animate": "angular/bower-angular-animate#^1.5.11",
+    "@bower_components/angular-bootstrap": "angular-ui/bootstrap-bower#^2.2.0",
+    "@bower_components/angular-bootstrap-confirm": "mattlewis92/angular-bootstrap-confirm#^2.5.1",
+    "@bower_components/angular-file-saver": "frankdean/angular-file-saver#1.1.4-rc.1",
+    "@bower_components/angular-i18n": "angular/bower-angular-i18n#^1.5.11",
+    "@bower_components/angular-jwt": "auth0/angular-jwt#^0.1.7",
+    "@bower_components/angular-loader": "angular/bower-angular-loader#^1.5.11",
+    "@bower_components/angular-messages": "angular/bower-angular-messages#^1.5.11",
+    "@bower_components/angular-mocks": "angular/bower-angular-mocks#^1.5.11",
+    "@bower_components/angular-pagedown": "kennyki/angular-pagedown#0.4.4",
+    "@bower_components/angular-paging": "brantwills/Angular-Paging#^2.2.2",
+    "@bower_components/angular-resource": "angular/bower-angular-resource#^1.5.11",
+    "@bower_components/angular-route": "angular/bower-angular-route#^1.5.11",
+    "@bower_components/angular-sanitize": "angular/bower-angular-sanitize#^1.5.11",
+    "@bower_components/angular-simple-logger": "nmccready/angular-simple-logger#~0.1.4",
+    "@bower_components/angular-socket-io": "btford/angular-socket-io#^0.7.0",
+    "@bower_components/angular-validation-match": "TheSharpieOne/angular-validation-match#^1.9.0",
+    "@bower_components/bootstrap": "twbs/bootstrap#^3.3.6",
+    "@bower_components/file-saver": "eligrey/FileSaver.js#^1.3.3",
+    "@bower_components/html5-boilerplate": "h5bp/html5-boilerplate#^5.3.0",
+    "@bower_components/jquery": "jquery/jquery-dist#1.9.1 - 3",
+    "@bower_components/leaflet": "Leaflet/Leaflet#1.0.3",
+    "@bower_components/leaflet-dist": "vperron/leaflet-dist#0.7.x",
+    "@bower_components/leaflet-draw": "Leaflet/Leaflet.draw#0.4.9",
+    "@bower_components/lodash": "lodash/lodash#^4.17.4",
+    "@bower_components/open-location-code": "google/open-location-code#^1.0.1",
+    "@bower_components/pagedown": "baminteractive/PageDown#^1.1.0",
+    "@bower_components/proj4": "proj4js/proj4js#2.4.4",
+    "@bower_components/socket.io-client": "LearnBoost/socket.io-client#^1.7.2",
+    "@bower_components/ui-leaflet": "frankdean/ui-leaflet#1.0.4-rc.1",
+    "@bower_components/ui-leaflet-draw": "angular-ui/ui-leaflet-draw#0.0.5"
+  },
+  "engines": {
+    "yarn": ">= 1.0.0"
+  },
   "scripts": {
     "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/@bower_components'), 'app/bower_components', 'junction') } catch (e) { }\"",
     "prestart": "yarn install",
@@ -65,43 +103,5 @@
     "build:css": "cssmin app/css/app.css > dist/app/css/app.css && cssmin app/css/ie10-viewport-bug-workaround.css > dist/app/css/ie10-viewport-bug-workaround.css",
     "dist": "copyfiles 'app/bower_components/leaflet/dist/leaflet.js' 'app/bower_components/leaflet/dist/images/*.png' 'app/bower_components/leaflet-draw/dist/leaflet.draw.js' 'app/bower_components/leaflet-draw/dist/images/*' 'app/bower_components/ui-leaflet-draw/dist/ui-leaflet-draw.js' 'app/bower_components/socket.io-client/socket.io.js' 'app/bower_components/**/*.min.js' 'app/bower_components/**/*.min.js.map' 'app/bower_components/angular-i18n/angular-locale_en-gb.js' 'app/bower_components/pagedown/*.js' 'app/bower_components/proj4/dist/*.js' 'app/bower_components/pagedown/*.png' 'app/bower_components/ui-leaflet/**/*.min.no-header.js' 'app/bower_components/**/*.css' 'app/bower_components/**/*.css.map' 'app/css/*.min.css' 'app/index*.html' 'app/partials/*.html' dist",
     "build-release": "yarn run disable-debug && yarn run disable-debug-logging && yarn run clean && yarn run build && yarn run dist && yarn run update-index-prod && yarn run dist-update-index-async && yarn run update-index-async-prod && yarn run enable-debug && yarn run enable-debug-logging"
-  },
-  "dependencies": {
-    "@bower_components/Blob.js": "angular-1x/Blob.js#1.0.0",
-    "@bower_components/angular": "angular/bower-angular#1.5.11",
-    "@bower_components/angular-animate": "angular/bower-angular-animate#~1.5.11",
-    "@bower_components/angular-bootstrap": "angular-ui/bootstrap-bower#^2.2.0",
-    "@bower_components/angular-bootstrap-confirm": "mattlewis92/angular-bootstrap-confirm#^2.5.1",
-    "@bower_components/angular-file-saver": "frankdean/angular-file-saver#1.1.4-rc.1",
-    "@bower_components/angular-i18n": "angular/bower-angular-i18n#~1.5.11",
-    "@bower_components/angular-jwt": "auth0/angular-jwt#^0.1.7",
-    "@bower_components/angular-loader": "angular/bower-angular-loader#~1.5.11",
-    "@bower_components/angular-messages": "angular/bower-angular-messages#~1.5.11",
-    "@bower_components/angular-mocks": "angular/bower-angular-mocks#~1.5.11",
-    "@bower_components/angular-pagedown": "kennyki/angular-pagedown#0.4.4",
-    "@bower_components/angular-paging": "brantwills/Angular-Paging#^2.2.2",
-    "@bower_components/angular-resource": "angular/bower-angular-resource#~1.5.11",
-    "@bower_components/angular-route": "angular/bower-angular-route#~1.5.11",
-    "@bower_components/angular-sanitize": "angular/bower-angular-sanitize#~1.5.11",
-    "@bower_components/angular-simple-logger": "nmccready/angular-simple-logger#~0.1.4",
-    "@bower_components/angular-socket-io": "btford/angular-socket-io#^0.7.0",
-    "@bower_components/angular-validation-match": "TheSharpieOne/angular-validation-match#^1.9.0",
-    "@bower_components/bootstrap": "twbs/bootstrap#^3.3.6",
-    "@bower_components/file-saver": "eligrey/FileSaver.js#^1.3.3",
-    "@bower_components/html5-boilerplate": "h5bp/html5-boilerplate#^5.3.0",
-    "@bower_components/jquery": "jquery/jquery-dist#1.9.1 - 3",
-    "@bower_components/leaflet": "Leaflet/Leaflet#1.0.3",
-    "@bower_components/leaflet-dist": "vperron/leaflet-dist#0.7.x",
-    "@bower_components/leaflet-draw": "Leaflet/Leaflet.draw#0.4.9",
-    "@bower_components/lodash": "lodash/lodash#^4.17.4",
-    "@bower_components/open-location-code": "google/open-location-code#^1.0.1",
-    "@bower_components/pagedown": "baminteractive/PageDown#^1.1.0",
-    "@bower_components/proj4": "proj4js/proj4js#2.4.4",
-    "@bower_components/socket.io-client": "LearnBoost/socket.io-client#^1.7.2",
-    "@bower_components/ui-leaflet": "frankdean/ui-leaflet#1.0.4-rc.1",
-    "@bower_components/ui-leaflet-draw": "angular-ui/ui-leaflet-draw#0.0.5"
-  },
-  "engines": {
-    "yarn": ">= 1.0.0"
   }
 }
