--- a/package.json
+++ b/package.json
@@ -39,21 +39,21 @@
   },
   "dependencies": {
     "@bower_components/Blob.js": "angular-1x/Blob.js#1.0.0",
-    "@bower_components/angular": "angular/bower-angular#^1.5.11",
-    "@bower_components/angular-animate": "angular/bower-angular-animate#^1.5.11",
+    "@bower_components/angular": "angular/bower-angular#^1.6.6",
+    "@bower_components/angular-animate": "angular/bower-angular-animate#^1.6.6",
     "@bower_components/angular-bootstrap": "angular-ui/bootstrap-bower#^2.2.0",
     "@bower_components/angular-bootstrap-confirm": "mattlewis92/angular-bootstrap-confirm#^2.5.1",
     "@bower_components/angular-file-saver": "frankdean/angular-file-saver#1.1.4-rc.1",
-    "@bower_components/angular-i18n": "angular/bower-angular-i18n#^1.5.11",
+    "@bower_components/angular-i18n": "angular/bower-angular-i18n#^1.6.6",
     "@bower_components/angular-jwt": "auth0/angular-jwt#^0.1.7",
-    "@bower_components/angular-loader": "angular/bower-angular-loader#^1.5.11",
-    "@bower_components/angular-messages": "angular/bower-angular-messages#^1.5.11",
-    "@bower_components/angular-mocks": "angular/bower-angular-mocks#^1.5.11",
+    "@bower_components/angular-loader": "angular/bower-angular-loader#^1.6.6",
+    "@bower_components/angular-messages": "angular/bower-angular-messages#^1.6.6",
+    "@bower_components/angular-mocks": "angular/bower-angular-mocks#^1.6.6",
     "@bower_components/angular-pagedown": "kennyki/angular-pagedown#0.4.4",
     "@bower_components/angular-paging": "brantwills/Angular-Paging#^2.2.2",
-    "@bower_components/angular-resource": "angular/bower-angular-resource#^1.5.11",
-    "@bower_components/angular-route": "angular/bower-angular-route#^1.5.11",
-    "@bower_components/angular-sanitize": "angular/bower-angular-sanitize#^1.5.11",
+    "@bower_components/angular-resource": "angular/bower-angular-resource#^1.6.6",
+    "@bower_components/angular-route": "angular/bower-angular-route#^1.6.6",
+    "@bower_components/angular-sanitize": "angular/bower-angular-sanitize#^1.6.6",
     "@bower_components/angular-simple-logger": "nmccready/angular-simple-logger#~0.1.4",
     "@bower_components/angular-socket-io": "btford/angular-socket-io#^0.7.0",
     "@bower_components/angular-validation-match": "TheSharpieOne/angular-validation-match#^1.9.0",
@@ -76,7 +76,7 @@
     "yarn": ">= 1.0.0"
   },
   "scripts": {
-    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/@bower_components'), 'app/bower_components', 'junction') } catch (e) { }\"",
+    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').relative('app', 'node_modules/@bower_components'), 'app/bower_components', 'junction') } catch (e) { }\"",
     "prestart": "yarn install",
     "start": "http-server -a localhost -p 8000 -c-1",
     "pretest": "yarn install",
