--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "GPS"
   ],
   "devDependencies": {
-    "bower": "^1.7.2",
     "copyfiles": "^1.0.0",
     "cssmin": "^0.4.3",
     "firefox-profile": "^1.0.0",
-    "http-server": "^0.10.0",
+    "http-server": "^0.11.1",
     "jasmine-core": "^2.8.0",
     "jshint": "^2.9.1",
     "karma": "^1.7.1",
@@ -34,49 +33,47 @@
     "protractor": "^5.1.1",
     "q": "^1.4.1",
     "rimraf": "^2.5.1",
-    "shelljs": "^0.7.6",
+    "shelljs": "^0.8.1",
     "uglify-js": "^2.8.29"
   },
   "dependencies": {
-    "@bower_components/Blob.js": "angular-1x/Blob.js#1.0.0",
-    "@bower_components/angular": "angular/bower-angular#^1.6.6",
-    "@bower_components/angular-animate": "angular/bower-angular-animate#^1.6.6",
-    "@bower_components/angular-bootstrap": "angular-ui/bootstrap-bower#^2.2.0",
-    "@bower_components/angular-bootstrap-confirm": "mattlewis92/angular-bootstrap-confirm#^2.5.1",
-    "@bower_components/angular-file-saver": "frankdean/angular-file-saver#1.1.4-rc.1",
-    "@bower_components/angular-i18n": "angular/bower-angular-i18n#^1.6.6",
-    "@bower_components/angular-jwt": "auth0/angular-jwt#^0.1.7",
-    "@bower_components/angular-loader": "angular/bower-angular-loader#^1.6.6",
-    "@bower_components/angular-messages": "angular/bower-angular-messages#^1.6.6",
-    "@bower_components/angular-mocks": "angular/bower-angular-mocks#^1.6.6",
-    "@bower_components/angular-pagedown": "kennyki/angular-pagedown#0.4.4",
-    "@bower_components/angular-paging": "brantwills/Angular-Paging#^2.2.2",
-    "@bower_components/angular-resource": "angular/bower-angular-resource#^1.6.6",
-    "@bower_components/angular-route": "angular/bower-angular-route#^1.6.6",
-    "@bower_components/angular-sanitize": "angular/bower-angular-sanitize#^1.6.6",
-    "@bower_components/angular-simple-logger": "nmccready/angular-simple-logger#~0.1.4",
-    "@bower_components/angular-socket-io": "btford/angular-socket-io#^0.7.0",
-    "@bower_components/angular-validation-match": "TheSharpieOne/angular-validation-match#^1.9.0",
-    "@bower_components/bootstrap": "twbs/bootstrap#^3.3.6",
-    "@bower_components/file-saver": "eligrey/FileSaver.js#^1.3.3",
-    "@bower_components/html5-boilerplate": "h5bp/html5-boilerplate#^5.3.0",
-    "@bower_components/jquery": "jquery/jquery-dist#1.9.1 - 3",
-    "@bower_components/leaflet": "Leaflet/Leaflet#1.0.3",
-    "@bower_components/leaflet-dist": "vperron/leaflet-dist#0.7.x",
-    "@bower_components/leaflet-draw": "Leaflet/Leaflet.draw#0.4.9",
-    "@bower_components/lodash": "lodash/lodash#^4.17.4",
-    "@bower_components/open-location-code": "google/open-location-code#^1.0.1",
-    "@bower_components/pagedown": "baminteractive/PageDown#^1.1.0",
-    "@bower_components/proj4": "proj4js/proj4js#2.4.4",
-    "@bower_components/socket.io-client": "LearnBoost/socket.io-client#^1.7.2",
-    "@bower_components/ui-leaflet": "frankdean/ui-leaflet#1.0.4-rc.1",
-    "@bower_components/ui-leaflet-draw": "angular-ui/ui-leaflet-draw#0.0.5"
+    "angular-animate": "^1.6.8",
+    "angular-bootstrap-confirm": "mattlewis92/angular-bootstrap-confirm#^2.5.1",
+    "angular-file-saver": "alferov/angular-file-saver#^1.1.3",
+    "angular-i18n": "^1.6.8",
+    "angular-jwt": "auth0/angular-jwt#^0.1.9",
+    "angular-loader": "^1.6.8",
+    "angular-messages": "^1.6.8",
+    "angular-mocks": "^1.6.8",
+    "angular-pagedown": "kennyki/angular-pagedown#0.4.4",
+    "angular-paging": "brantwills/Angular-Paging#^2.2.2",
+    "angular-resource": "^1.6.8",
+    "angular-route": "^1.6.8",
+    "angular-sanitize": "^1.6.8",
+    "angular-simple-logger": "nmccready/angular-simple-logger#~0.1.4",
+    "angular-socket-io": "btford/angular-socket-io#^0.7.0",
+    "angular-ui-bootstrap": "^2.2.0",
+    "angular-validation-match": "TheSharpieOne/angular-validation-match#^1.9.0",
+    "blob-tmp": "angular-1x/Blob.js#1.0.0",
+    "bootstrap": "^3.3.6",
+    "html5-boilerplate": "^6.0.1",
+    "jquery": "jquery/jquery-dist#1.9.1 - 3",
+    "leaflet": "Leaflet/Leaflet#1.0.3",
+    "leaflet-dist": "vperron/leaflet-dist#0.7.x",
+    "leaflet-draw": "Leaflet/Leaflet.draw#0.4.9",
+    "lodash": "lodash/lodash#^4.17.4",
+    "open-location-code": "google/open-location-code#^1.0.1",
+    "pagedown": "baminteractive/PageDown#^1.1.0",
+    "proj4": "proj4js/proj4js#2.4.4",
+    "socket.io-client": "LearnBoost/socket.io-client#^1.7.2",
+    "ui-leaflet": "frankdean/ui-leaflet#1.0.4-rc.1",
+    "ui-leaflet-draw": "angular-ui/ui-leaflet-draw#0.0.5"
   },
   "engines": {
     "yarn": ">= 1.0.0"
   },
   "scripts": {
-    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').relative('app', 'node_modules/@bower_components'), 'app/bower_components', 'junction') } catch (e) { }\"",
+    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').relative('app', 'node_modules'), 'app/node_modules', 'junction') } catch (e) { }\"",
     "prestart": "yarn install",
     "start": "http-server -a localhost -p 8000 -c-1",
     "pretest": "yarn install",
@@ -86,8 +83,8 @@
     "update-webdriver": "webdriver-manager update",
     "_preprotractor": "yarn run update-webdriver",
     "protractor": "protractor test/protractor.conf.js",
-    "dist-update-index-async": "node -e \"require('shelljs/global'); sed('-i', /    \\/\\/ You need to run .npm run update-index-async. to inject the angular async code here/, sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map','app/bower_components/angular-loader/angular-loader.min.js'), 'dist/app/index-async.html');\"",
-    "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /    \\/\\/ You need to run .npm run update-index-async. to inject the angular async code here/, sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map','app/bower_components/angular-loader/angular-loader.min.js'), 'app/index-async.html');\"",
+    "dist-update-index-async": "node -e \"require('shelljs/global'); sed('-i', /    \\/\\/ You need to run .yarn run update-index-async. to inject the angular async code here/, sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=node_modules/angular-loader/angular-loader.min.js.map','app/node_modules/angular-loader/angular-loader.min.js'), 'dist/app/index-async.html');\"",
+    "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /    \\/\\/ You need to run .yarn run update-index-async. to inject the angular async code here/, sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=node_modules/angular-loader/angular-loader.min.js.map','app/node_modules/angular-loader/angular-loader.min.js'), 'app/index-async.html');\"",
     "disable-debug": "node -e \"require('shelljs/global'); sed('-i', /$compileProvider.debugInfoEnabled\\(true\\)/, '$compileProvider.debugInfoEnabled(false)', 'app/js/app.js');\"",
     "enable-debug": "node -e \"require('shelljs/global'); sed('-i', /$compileProvider.debugInfoEnabled\\(false\\)/, '$compileProvider.debugInfoEnabled(true)', 'app/js/app.js');\"",
     "disable-debug-logging": "node -e \"require('shelljs/global'); sed('-i', /$logProvider.debugEnabled\\(true\\)/, '$logProvider.debugEnabled(false)', 'app/js/app.js');\"",
@@ -101,7 +98,7 @@
     "build": "yarn run build:scripts && yarn run build:css",
     "build:scripts": "cd dist/app && ../../node_modules/uglify-js/bin/uglifyjs ../../app/js/*.js ../../app/js/**/*.js --compress --mangle --source-map trip.min.js.map --output trip.min.js",
     "build:css": "cssmin app/css/app.css > dist/app/css/app.css && cssmin app/css/ie10-viewport-bug-workaround.css > dist/app/css/ie10-viewport-bug-workaround.css",
-    "dist": "copyfiles 'app/bower_components/leaflet/dist/leaflet.js' 'app/bower_components/leaflet/dist/images/*.png' 'app/bower_components/leaflet-draw/dist/leaflet.draw.js' 'app/bower_components/leaflet-draw/dist/images/*' 'app/bower_components/ui-leaflet-draw/dist/ui-leaflet-draw.js' 'app/bower_components/socket.io-client/socket.io.js' 'app/bower_components/**/*.min.js' 'app/bower_components/**/*.min.js.map' 'app/bower_components/angular-i18n/angular-locale_en-gb.js' 'app/bower_components/pagedown/*.js' 'app/bower_components/proj4/dist/*.js' 'app/bower_components/pagedown/*.png' 'app/bower_components/ui-leaflet/**/*.min.no-header.js' 'app/bower_components/**/*.css' 'app/bower_components/**/*.css.map' 'app/css/*.min.css' 'app/index*.html' 'app/partials/*.html' dist",
+    "dist": "copyfiles 'app/node_modules/leaflet/dist/leaflet.js' 'app/node_modules/leaflet/dist/images/*.png' 'app/node_modules/leaflet-draw/dist/leaflet.draw.js' 'app/node_modules/leaflet-draw/dist/images/*' 'app/node_modules/ui-leaflet-draw/dist/ui-leaflet-draw.js' 'app/node_modules/socket.io-client/socket.io.js' 'app/node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js' 'app/node_modules/**/*.min.js' 'app/node_modules/**/*.min.js.map' 'app/node_modules/angular-i18n/angular-locale_en-gb.js' 'app/node_modules/pagedown/*.js' 'app/node_modules/proj4/dist/*.js' 'app/node_modules/pagedown/*.png' 'app/node_modules/ui-leaflet/**/*.min.no-header.js' 'app/node_modules/**/*.css' 'app/node_modules/**/*.css.map' 'app/css/*.min.css' 'app/index*.html' 'app/partials/*.html' dist",
     "build-release": "yarn run disable-debug && yarn run disable-debug-logging && yarn run clean && yarn run build && yarn run dist && yarn run update-index-prod && yarn run dist-update-index-async && yarn run update-index-async-prod && yarn run enable-debug && yarn run enable-debug-logging"
   }
 }
