Insert missing elevation values into itinerary routes when DEM data available
Also:

- Show estimate hiking time based on distance and ascent to itinerary
  route summary

- Removed requirement for waypoint name to be mandatory

- When pasting track log into itinerary, create waypoint for points
  which have a note attached

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Trip Recording and Itinerary Planner web client",
   "author": {
     "name": "Frank Dean",
-    "email": "frankdean@users.noreply.github.com"
+    "email": "support@fdsd.co.uk"
   },
   "license": "GPL-3.0+",
   "private": true,
@@ -37,37 +37,37 @@
     "uglify-js": "^2.8.29"
   },
   "dependencies": {
-    "angular-animate": "^1.6.8",
-    "angular-bootstrap-confirm": "mattlewis92/angular-bootstrap-confirm#^2.5.1",
-    "angular-file-saver": "alferov/angular-file-saver#^1.1.3",
-    "angular-i18n": "^1.6.8",
-    "angular-jwt": "auth0/angular-jwt#^0.1.9",
-    "angular-loader": "^1.6.8",
-    "angular-messages": "^1.6.8",
-    "angular-mocks": "^1.6.8",
+    "angular": "~1.6.8",
+    "angular-animate": "~1.6.8",
+    "angular-bootstrap-confirm": "^2.5.1",
+    "angular-file-saver": "^1.1.3",
+    "angular-i18n": "~1.6.8",
+    "angular-jwt": "^0.1.9",
+    "angular-loader": "~1.6.8",
+    "angular-messages": "~1.6.8",
+    "angular-mocks": "~1.6.8",
     "angular-pagedown": "kennyki/angular-pagedown#0.4.4",
-    "angular-paging": "brantwills/Angular-Paging#^2.2.2",
-    "angular-resource": "^1.6.8",
-    "angular-route": "^1.6.8",
-    "angular-sanitize": "^1.6.8",
-    "angular-simple-logger": "nmccready/angular-simple-logger#~0.1.4",
-    "angular-socket-io": "btford/angular-socket-io#^0.7.0",
+    "angular-paging": "^2.2.2",
+    "angular-resource": "~1.6.8",
+    "angular-route": "~1.6.8",
+    "angular-sanitize": "~1.6.8",
+    "angular-simple-logger": "^0.1.4",
+    "angular-socket-io": "^0.7.0",
     "angular-ui-bootstrap": "^2.2.0",
-    "angular-validation-match": "TheSharpieOne/angular-validation-match#^1.9.0",
-    "blob-tmp": "angular-1x/Blob.js#1.0.0",
-    "bootstrap": "^3.3.6",
+    "angular-validation-match": "^1.9.0",
+    "bootstrap": "^3.3.7",
+    "cf-blob.js": "^0.0.1",
     "html5-boilerplate": "^6.0.1",
-    "jquery": "jquery/jquery-dist#1.9.1 - 3",
-    "leaflet": "Leaflet/Leaflet#1.0.3",
-    "leaflet-dist": "vperron/leaflet-dist#0.7.x",
-    "leaflet-draw": "Leaflet/Leaflet.draw#0.4.9",
-    "lodash": "lodash/lodash#^4.17.4",
+    "jquery": "^3.3.1",
+    "leaflet": "1.0.3",
+    "leaflet-draw": "0.4.9",
+    "lodash": "lodash/lodash#^4.17.11",
     "open-location-code": "google/open-location-code#^1.0.1",
     "pagedown": "baminteractive/PageDown#^1.1.0",
-    "proj4": "proj4js/proj4js#2.4.4",
-    "socket.io-client": "LearnBoost/socket.io-client#^1.7.2",
-    "ui-leaflet": "frankdean/ui-leaflet#1.0.4-rc.1",
-    "ui-leaflet-draw": "angular-ui/ui-leaflet-draw#0.0.5"
+    "proj4": "2.4.4",
+    "socket.io-client": "1.7.2",
+    "ui-leaflet": "https://www.fdsd.co.uk/trip-server/download/ui-leaflet-1.0.4-rc.1.tar.gz",
+    "ui-leaflet-draw": "0.0.5"
   },
   "engines": {
     "yarn": ">= 1.0.0"
