Implemented user password change

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,30 +1,31 @@
 {
-  "globalstrict": true,
-  "globals": {
-	"OpenLocationCode": false,
-	"proj4": false,
-	"FormData" : false,
-	"Buffer": false,
-	"browser": false,
-	"by": false,
-	"element": false,
-	"io": false,
-	"jasmine": false,
-	"pending": false,
-	"protractor": false,
-	"require": false,
-	"spyOn": false,
-    "afterEach": false,
-    "angular": false,
-    "beforeEach": false,
-    "describe": false,
-	"xdescribe": false,
-    "expect": false,
-    "inject": false,
-    "it": false,
-	"xit": false,
-    "module": false,
-	"L": false,
-	"_": false
-  }
+    "globalstrict": true,
+    "globals": {
+        "OpenLocationCode": false,
+        "proj4": false,
+        "FormData": false,
+        "Buffer": false,
+        "browser": false,
+        "by": false,
+        "element": false,
+        "io": false,
+        "jasmine": false,
+        "pending": false,
+        "protractor": false,
+        "require": false,
+        "spyOn": false,
+        "afterEach": false,
+        "angular": false,
+        "beforeEach": false,
+        "describe": false,
+        "xdescribe": false,
+        "expect": false,
+        "inject": false,
+        "it": false,
+        "xit": false,
+        "module": false,
+        "L": false,
+        "_": false,
+	"zxcvbn": false
+    }
 }
