--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trip-web-client",
-  "version": "0.0.0",
+  "version": "1.0.0-rc.6",
   "description": "Trip Recording and Itinerary Planner web client",
   "author": {
     "name": "Frank Dean",
@@ -40,6 +40,7 @@
     "angular": "~1.6.8",
     "angular-animate": "~1.6.8",
     "angular-bootstrap-confirm": "^2.5.1",
+    "angular-cookies": "~1.6.8",
     "angular-file-saver": "^1.1.3",
     "angular-i18n": "~1.6.8",
     "angular-jwt": "^0.1.9",
@@ -55,7 +56,7 @@
     "angular-socket-io": "^0.7.0",
     "angular-ui-bootstrap": "^2.2.0",
     "angular-validation-match": "^1.9.0",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^3.4.0",
     "cf-blob.js": "^0.0.1",
     "html5-boilerplate": "^6.0.1",
     "jquery": "^3.3.1",
@@ -67,7 +68,8 @@
     "proj4": "2.4.4",
     "socket.io-client": "1.7.2",
     "ui-leaflet": "https://www.fdsd.co.uk/trip-server/download/ui-leaflet-1.0.4-rc.1.tar.gz",
-    "ui-leaflet-draw": "0.0.5"
+    "ui-leaflet-draw": "0.0.5",
+    "zxcvbn": "^4.4.2"
   },
   "engines": {
     "yarn": ">= 1.0.0"
@@ -80,7 +82,7 @@
     "test": "karma start test/karma.conf.js",
     "test-single-run": "karma start test/karma.conf.js  --single-run",
     "preupdate-webdriver": "yarn install",
-    "update-webdriver": "webdriver-manager update",
+    "update-webdriver": "webdriver-manager update --gecko=false",
     "_preprotractor": "yarn run update-webdriver",
     "protractor": "protractor test/protractor.conf.js",
     "dist-update-index-async": "node -e \"require('shelljs/global'); sed('-i', /    \\/\\/ You need to run .yarn run update-index-async. to inject the angular async code here/, sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=node_modules/angular-loader/angular-loader.min.js.map','app/node_modules/angular-loader/angular-loader.min.js'), 'dist/app/index-async.html');\"",
@@ -98,7 +100,10 @@
     "build": "yarn run build:scripts && yarn run build:css",
     "build:scripts": "cd dist/app && ../../node_modules/uglify-js/bin/uglifyjs ../../app/js/*.js ../../app/js/**/*.js --compress --mangle --source-map trip.min.js.map --output trip.min.js",
     "build:css": "cssmin app/css/app.css > dist/app/css/app.css && cssmin app/css/ie10-viewport-bug-workaround.css > dist/app/css/ie10-viewport-bug-workaround.css",
-    "dist": "copyfiles 'app/node_modules/leaflet/dist/leaflet.js' 'app/node_modules/leaflet/dist/images/*.png' 'app/node_modules/leaflet-draw/dist/leaflet.draw.js' 'app/node_modules/leaflet-draw/dist/images/*' 'app/node_modules/ui-leaflet-draw/dist/ui-leaflet-draw.js' 'app/node_modules/socket.io-client/socket.io.js' 'app/node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js' 'app/node_modules/**/*.min.js' 'app/node_modules/**/*.min.js.map' 'app/node_modules/angular-i18n/angular-locale_en-gb.js' 'app/node_modules/pagedown/*.js' 'app/node_modules/proj4/dist/*.js' 'app/node_modules/pagedown/*.png' 'app/node_modules/ui-leaflet/**/*.min.no-header.js' 'app/node_modules/**/*.css' 'app/node_modules/**/*.css.map' 'app/css/*.min.css' 'app/index*.html' 'app/partials/*.html' dist",
-    "build-release": "yarn run disable-debug && yarn run disable-debug-logging && yarn run clean && yarn run build && yarn run dist && yarn run update-index-prod && yarn run dist-update-index-async && yarn run update-index-async-prod && yarn run enable-debug && yarn run enable-debug-logging"
+    "dist": "copyfiles 'app/node_modules/leaflet/dist/leaflet.js' 'app/node_modules/leaflet/dist/images/*.png' 'app/node_modules/leaflet-draw/dist/leaflet.draw.js' 'app/node_modules/leaflet-draw/dist/images/*' 'app/node_modules/ui-leaflet-draw/dist/ui-leaflet-draw.js' 'app/node_modules/zxcvbn/dist/zxcvbn.js' 'app/node_modules/zxcvbn/dist/zxcvbn.js.map' 'app/node_modules/socket.io-client/socket.io.js' 'app/node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js' 'app/node_modules/**/*.min.js' 'app/node_modules/**/*.min.js.map' 'app/node_modules/angular-i18n/angular-locale_en-gb.js' 'app/node_modules/pagedown/*.js' 'app/node_modules/proj4/dist/*.js' 'app/node_modules/pagedown/*.png' 'app/node_modules/ui-leaflet/**/*.min.no-header.js' 'app/node_modules/**/*.css' 'app/node_modules/**/*.css.map' 'app/css/*.min.css' 'app/index*.html' 'app/partials/*.html' dist",
+    "post-dist": "node -e \"require('shelljs/global'); mv('dist/app/index-async.html', 'dist/app/index.html'); rm('-f', 'dist/app/index-dev.html')\"",
+    "tar-release": "cd dist && tar -zcf ${npm_package_name}-release-${npm_package_version}.tar.gz app",
+    "zip-release": "cd dist && zip -qr ${npm_package_name}-release-${npm_package_version}.zip app",
+    "build-release": "yarn run disable-debug && yarn run disable-debug-logging && yarn run clean && yarn run build && yarn run dist && yarn run update-index-prod && yarn run dist-update-index-async && yarn run update-index-async-prod && yarn run post-dist && yarn run tar-release && yarn run zip-release && yarn run enable-debug && yarn run enable-debug-logging"
   }
 }
