--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trip-web-client",
-  "version": "1.0.0",
+  "version": "1.1.0-rc.1",
   "description": "Trip Recording and Itinerary Planner web client",
   "author": {
     "name": "Frank Dean",
@@ -17,13 +17,13 @@
     "GPS"
   ],
   "devDependencies": {
-    "copyfiles": "^1.0.0",
+    "copyfiles": "^2.1.0",
     "cssmin": "^0.4.3",
     "firefox-profile": "^1.0.0",
     "http-server": "^0.11.1",
     "jasmine-core": "^2.8.0",
     "jshint": "^2.9.1",
-    "karma": "^1.7.1",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-jasmine": "^1.0.0",
@@ -34,24 +34,24 @@
     "q": "^1.4.1",
     "rimraf": "^2.5.1",
     "shelljs": "^0.8.1",
-    "uglify-js": "^2.8.29"
+    "uglify-js": "^3.5.0"
   },
   "dependencies": {
-    "angular": "~1.6.8",
-    "angular-animate": "~1.6.8",
+    "angular": "^1.7.8",
+    "angular-animate": "^1.7.8",
     "angular-bootstrap-confirm": "^2.5.1",
-    "angular-cookies": "~1.6.8",
+    "angular-cookies": "^1.7.8",
     "angular-file-saver": "^1.1.3",
-    "angular-i18n": "~1.6.8",
+    "angular-i18n": "^1.7.8",
     "angular-jwt": "^0.1.9",
-    "angular-loader": "~1.6.8",
-    "angular-messages": "~1.6.8",
-    "angular-mocks": "~1.6.8",
+    "angular-loader": "^1.7.8",
+    "angular-messages": "^1.7.8",
+    "angular-mocks": "^1.7.8",
     "angular-pagedown": "kennyki/angular-pagedown#0.4.4",
     "angular-paging": "^2.2.2",
-    "angular-resource": "~1.6.8",
-    "angular-route": "~1.6.8",
-    "angular-sanitize": "~1.6.8",
+    "angular-resource": "^1.7.8",
+    "angular-route": "^1.7.8",
+    "angular-sanitize": "^1.7.8",
     "angular-simple-logger": "^0.1.4",
     "angular-socket-io": "^0.7.0",
     "angular-ui-bootstrap": "^2.2.0",
@@ -63,10 +63,10 @@
     "leaflet": "1.0.3",
     "leaflet-draw": "0.4.9",
     "lodash": "lodash/lodash#^4.17.11",
-    "open-location-code": "google/open-location-code#^1.0.1",
+    "open-location-code": "google/open-location-code#^1.0.3",
     "pagedown": "baminteractive/PageDown#^1.1.0",
-    "proj4": "2.4.4",
-    "socket.io-client": "1.7.2",
+    "proj4": "^2.4.4",
+    "socket.io-client": "2.2.0",
     "ui-leaflet": "https://www.fdsd.co.uk/trip-server/download/ui-leaflet-1.0.4-rc.1.tar.gz",
     "ui-leaflet-draw": "0.0.5",
     "zxcvbn": "^4.4.2"
@@ -98,12 +98,12 @@
     "lint": "jshint app/js/*.js app/js/**/*.js test/**/*.js",
     "prebuild": "mkdirp dist/app/partials --mode 0775 && mkdirp dist/app/css --mode 0775",
     "build": "yarn run build:scripts && yarn run build:css",
-    "build:scripts": "cd dist/app && ../../node_modules/uglify-js/bin/uglifyjs ../../app/js/*.js ../../app/js/**/*.js --compress --mangle --source-map trip.min.js.map --output trip.min.js",
+    "build:scripts": "cd dist/app && ../../node_modules/uglify-js/bin/uglifyjs ../../app/js/*.js ../../app/js/**/*.js --compress --mangle --source-map --output trip.min.js",
     "build:css": "cssmin app/css/app.css > dist/app/css/app.css && cssmin app/css/ie10-viewport-bug-workaround.css > dist/app/css/ie10-viewport-bug-workaround.css",
-    "dist": "copyfiles 'app/node_modules/leaflet/dist/leaflet.js' 'app/node_modules/leaflet/dist/images/*.png' 'app/node_modules/leaflet-draw/dist/leaflet.draw.js' 'app/node_modules/leaflet-draw/dist/images/*' 'app/node_modules/ui-leaflet-draw/dist/ui-leaflet-draw.js' 'app/node_modules/zxcvbn/dist/zxcvbn.js' 'app/node_modules/zxcvbn/dist/zxcvbn.js.map' 'app/node_modules/socket.io-client/socket.io.js' 'app/node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js' 'app/node_modules/**/*.min.js' 'app/node_modules/**/*.min.js.map' 'app/node_modules/angular-i18n/angular-locale_en-gb.js' 'app/node_modules/pagedown/*.js' 'app/node_modules/proj4/dist/*.js' 'app/node_modules/pagedown/*.png' 'app/node_modules/ui-leaflet/**/*.min.no-header.js' 'app/node_modules/**/*.css' 'app/node_modules/**/*.css.map' 'app/css/*.min.css' 'app/index*.html' 'app/partials/*.html' dist",
+    "dist": "copyfiles 'app/node_modules/leaflet/dist/leaflet.js' 'app/node_modules/leaflet/dist/images/*.png' 'app/node_modules/leaflet-draw/dist/leaflet.draw.js' 'app/node_modules/leaflet-draw/dist/images/*' 'app/node_modules/ui-leaflet-draw/dist/ui-leaflet-draw.js' 'app/node_modules/zxcvbn/dist/zxcvbn.js' 'app/node_modules/zxcvbn/dist/zxcvbn.js.map' 'app/node_modules/socket.io-client/dist/socket.io.js' 'app/node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js' 'app/node_modules/**/*.min.js' 'app/node_modules/**/*.min.js.map' 'app/node_modules/angular-i18n/angular-locale_en-gb.js' 'app/node_modules/pagedown/*.js' 'app/node_modules/proj4/dist/*.js' 'app/node_modules/pagedown/*.png' 'app/node_modules/ui-leaflet/**/*.min.no-header.js' 'app/node_modules/**/*.css' 'app/node_modules/**/*.css.map' 'app/css/*.min.css' 'app/index*.html' 'app/partials/*.html' dist",
     "post-dist": "node -e \"require('shelljs/global'); mv('dist/app/index-async.html', 'dist/app/index.html'); rm('-f', 'dist/app/index-dev.html')\"",
-    "tar-release": "cd dist && tar -zcf ${npm_package_name}-release-${npm_package_version}.tar.gz app",
-    "zip-release": "cd dist && zip -qr ${npm_package_name}-release-${npm_package_version}.zip app",
+    "tar-release": "cd dist && tar -zcf ${npm_package_name}-release-v${npm_package_version}.tar.gz app",
+    "zip-release": "cd dist && zip -qr ${npm_package_name}-release-v${npm_package_version}.zip app",
     "build-release": "yarn run disable-debug && yarn run disable-debug-logging && yarn run clean && yarn run build && yarn run dist && yarn run update-index-prod && yarn run dist-update-index-async && yarn run update-index-async-prod && yarn run post-dist && yarn run tar-release && yarn run zip-release && yarn run enable-debug && yarn run enable-debug-logging"
   }
 }
