--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trip-web-client",
-  "version": "1.1.2-rc.1",
+  "version": "1.1.2",
   "description": "Trip Recording and Itinerary Planner web client",
   "author": {
     "name": "Frank Dean",
@@ -81,6 +81,7 @@
     "test": "karma start test/karma.conf.js",
     "test-single-run": "karma start test/karma.conf.js  --single-run",
     "preupdate-webdriver": "yarn install",
+    "update-webdriver-chrome-78": "webdriver-manager update --gecko=false --versions.chrome=78.0.3904.97",
     "update-webdriver": "webdriver-manager update --gecko=false",
     "_preprotractor": "yarn run update-webdriver",
     "protractor": "protractor test/protractor.conf.js",
