Re-implemented itinerary search results to provide more detailed results
Itinerary can be exanded to show only those routes, waypoints and tracks
that match the search criteria.  They can also be displayed on a map on
the same page.

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,6 +1,7 @@
 {
     "globalstrict": true,
     "globals": {
+        "Map": false,
         "OpenLocationCode": false,
         "proj4": false,
         "FormData": false,
