--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trip-web-client",
-  "version": "1.1.3",
+  "version": "1.1.5",
   "description": "Trip Recording and Itinerary Planner web client",
   "author": {
     "name": "Frank Dean",
@@ -26,9 +26,9 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.1.0",
     "karma-jasmine": "^1.1.2",
-    "karma-junit-reporter": "^1.2.0",
+    "karma-junit-reporter": "^2.0.1",
     "karma-safari-launcher": "^1.0.0",
-    "mkdirp": "^0.5.1",
+    "mkdirp": "^1.0.3",
     "protractor": "^5.1.1",
     "q": "^1.4.1",
     "rimraf": "^2.5.1",
@@ -57,15 +57,14 @@
     "angular-validation-match": "^1.9.0",
     "bootstrap": "^3.4.0",
     "cf-blob.js": "^0.0.1",
-    "html5-boilerplate": "^6.0.1",
+    "html5-boilerplate": "^7.3.0",
     "jquery": "^3.3.1",
-    "leaflet": "1.0.3",
-    "leaflet-draw": "0.4.9",
-    "lodash": "lodash/lodash#~>4.17.14",
+    "leaflet": "^1.6.0",
+    "leaflet-draw": "^1.0.4",
     "open-location-code": "google/open-location-code#^1.0.4",
     "pagedown": "baminteractive/PageDown#^1.1.0",
     "proj4": "^2.4.4",
-    "socket.io-client": "2.2.0",
+    "socket.io-client": "^2.2.0",
     "ui-leaflet": "https://www.fdsd.co.uk/trip-server/download/ui-leaflet-1.0.4-rc.1.tar.gz",
     "ui-leaflet-draw": "0.0.5",
     "zxcvbn": "^4.4.2"
