Minor updates to itinerary map behaviour
- Upgrade version of lodash package
- Bug fix - Itinerary waypoints not updated after pasting notes
- When pasting notes from track/location history, list now refreshed
- Recalculate bounds for itinerary map when settings applied
- Allow user to decide when popups are displayed on markers

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trip-web-client",
-  "version": "1.2.0",
+  "version": "1.2.1-rc.2",
   "description": "Trip Recording and Itinerary Planner web client",
   "author": {
     "name": "Frank Dean",
@@ -16,10 +16,13 @@
     "planner",
     "GPS"
   ],
+  "resolutions": {
+    "lodash": "^4.17.19"
+  },
   "devDependencies": {
     "copyfiles": "^2.1.1",
     "cssmin": "^0.4.3",
-    "firefox-profile": "^1.0.0",
+    "firefox-profile": "^2.0.0",
     "jasmine-core": "^2.8.0",
     "jshint": "^2.9.1",
     "karma": "^5.1.0",
