Additional utilities for managing itinerary tracks and routes
- Support GPX import with some GDAL extensions in the `ogr` namespace
- Option to convert itinerary tracks to routes
- Option to assign separate colours to selected routes and tracks
- Updated some packages to newer versions

--- a/.jshintrc
+++ b/.jshintrc
@@ -17,6 +17,7 @@
         "spyOn": false,
         "afterEach": false,
         "angular": false,
+        "beforeAll": false,
         "beforeEach": false,
         "describe": false,
         "xdescribe": false,
